--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "eslint": "eslint . --cache",
+    "eslint-fix": "npm run eslint -- --fix",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "next": "latest",
@@ -15,6 +18,12 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
+    "eslint-config-zakodium": "^7.0.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
     "typescript": "^4.9.4"
   }
 }
