--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@lukeed/uuid": "^2.0.0",
+    "@octokit/rest": "^19.0.5",
     "@popperjs/core": "^2.11.6",
     "@types/mime": "^3.0.1",
     "@types/react-datepicker": "^4.8.0",
@@ -33,6 +34,7 @@
     "react-hook-form": "^7.41.5",
     "react-kbs": "^2.1.0",
     "react-popper": "^2.3.0",
+    "react-query": "^3.39.2",
     "tailwindcss": "^3.2.4",
     "yup": "^0.32.11"
   },
